--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,15 +1,15 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+	font-family: 'Courier', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+		'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
 		'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 
 html {
-	margin: 10% 18% 0 18%;
+	margin: 5% 0 0 0;
 }
 
 code {
@@ -35,6 +35,9 @@ code {
 .content {
 	color: white;
 	position: absolute;
+	font-family: 'Segoe UI';
+	top: 25%;
+	left: 15%;
 }
 
 .visualize {
@@ -42,7 +45,7 @@ code {
 }
 
 #measure-box {
-	margin: 0 10% 0 10%;
+	margin: auto;
 }
 
 .time-signature {
@@ -51,7 +54,20 @@ code {
 	margin-left: 20%;
 }
 
+button {
+	margin: 2px 2px 2px 2px;
+}
+
 .top-btns {
+	color: #000000;
+	background: transparent;
+	border: 2px solid #000000;
+	border-radius: 6px;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
+.bottom-btns {
 	color: #000000;
 	background: transparent;
 	border: 2px solid #000000;
@@ -74,4 +90,37 @@ code {
 
 #subdivision-desc {
 	font-size: 8px;
+}
+
+.dimension {
+	margin-top: 10%;
+}
+
+.top-row-btn:checked {
+	background: #26ca28;
+}
+
+.top-row-shell {
+	display: inline-block;
+}
+
+.App {
+	max-width: 320px;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.play-export {
+	display: inline-block;
+}
+
+.sequence-transport button {
+	position: relative;
+}
+
+.sequence-transport {
+	margin-bottom: 5%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
 }
