--- a/app/src/index.css
+++ b/app/src/index.css
@@ -98,10 +98,69 @@ button {
 
 .top-row-shell {
 	display: inline-block;
+	margin: 0;
+}
+
+.bottom-row-shell {
+	display: inline-block;
+	margin: 0;
 }
 
 .top-row-btn {
-	display: none;
+	/* display: none; */
+}
+
+.top-row {
+	overflow-x: visible;
+	white-space: nowrap;
+	text-align: center;
+}
+
+.bottom-row {
+	overflow-x: visible;
+	white-space: nowrap;
+}
+
+input[type='checkbox'] {
+	opacity: 0;
+	z-index: -1;
+}
+
+input[type='checkbox'] + label {
+	width: 15px;
+	height: 15px;
+	display: block;
+	position: relative;
+	margin: 0;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	text-indent: -999px;
+	overflow: hidden;
+	border: 1px solid black;
+	cursor: pointer;
+}
+
+input[type='checkbox'].top-row-btn + label {
+	border: 1px solid black;
+	background: transparent;
+	transition: (0.5s, ease, all);
+}
+
+input[type='checkbox'].top-row-btn:checked + label {
+	border: 4px solid black;
+	background: white;
+}
+
+input[type='checkbox'].bottom-row-btn + label {
+	border: 1px solid black;
+	background: transparent;
+	transition: (0.5s, ease, all);
+}
+
+input[type='checkbox'].bottom-row-btn:checked + label {
+	border: 4px solid black;
+	background: white;
 }
 
 /* Sequence*/
